--- a/styles/signup.css
+++ b/styles/signup.css
@@ -330,6 +330,7 @@ body {
     }
 }
 
+
 /*   :::::::   Privacy Policy and Legal notice  :::::::   */
 .priv-polce-legl-note-box {
     display: flex;
@@ -368,9 +369,14 @@ body {
     text-shadow: 1px 1px 2px #00000040;
 }
 
-.backdrop-box {
-    width: 100vw;
-    height: 100vh;
+.backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 0;
 }
 
 .d-none {
