--- a/styles/signup.css
+++ b/styles/signup.css
@@ -83,6 +83,7 @@ body {
     left: -88px;
     top: 40%;
     transform: translateY(-50%);
+    cursor: pointer;
 }
 
 .arrow-link img {
@@ -353,7 +354,7 @@ body {
 .priv-legal {
     gap: 10px;
     color: #A8A8A8;
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 500;
     cursor: pointer;
     border: none;
