--- a/styles/board.css
+++ b/styles/board.css
@@ -65,16 +65,16 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
+#confirmTaskChanges:hover {
+  background-color: #29abe2;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
 #confirmTaskChanges:disabled {
   box-shadow: none;
   background-color: #d3d3d3;
   color: #a9a9a9;
   cursor: not-allowed;
-}
-
-#confirmTaskChanges:hover {
-  background-color: #29abe2;
-  box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 .board-card-assigned-contacts {
@@ -175,7 +175,8 @@ body {
 
 .board-wrapper {
   padding: 0 64px 24px 64px;
-  height: 100%;
+  min-height: calc(100% - 232px);
+  height: fit-content;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -188,7 +189,6 @@ body {
 }
 
 .board-title-field-wrapper {
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
