--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -68,6 +68,7 @@
   align-items: center;
   padding: 16px;
   gap: 16px;
+  transition: background-color 0.15s ease;
 }
 
 .contact-item:hover {
@@ -458,5 +459,19 @@
     gap: 0px;
     padding-bottom: 32px;
   }
+}
+
+.selected-contact {
+  background-color: #2a3647;
+  border-radius: 5px;
+}
+
+.selected-contact:hover{
+  background-color: #2a3647;
+  cursor: default;
+}
+
+ .selected-contact .contact-name {
+  color: white;
 }
 
