--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -163,6 +163,20 @@
 
 }
 
+.contact-form input.invalid {
+  border-color: #ff0000;
+  /* background-color: #FFE0E3; */
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 12px;
+  margin-top: -15px;
+  margin-bottom: 10px;
+  position: relative;
+  right: 0;
+}
+
 button:hover {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
