--- a/styles/board.css
+++ b/styles/board.css
@@ -19,6 +19,7 @@
 .board-header {
   height: 232px;
   width: 100%;
+  max-width: calc(1920px - 232px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -178,6 +179,7 @@ body {
   min-height: calc(100% - 232px);
   height: fit-content;
   width: 100%;
+  max-width: calc(1920px - 232px);
   display: flex;
   justify-content: space-between;
   gap: 26px;
