--- a/styles/legal-notice.css
+++ b/styles/legal-notice.css
@@ -10,6 +10,7 @@
 }
 
 .legal-notice-content {
+    max-width: calc(1920px - 232px);
     display: flex;
     flex-direction: column;
     gap: 24px;
