--- a/styles/AddTaskSection/addTaskContactsList.css
+++ b/styles/AddTaskSection/addTaskContactsList.css
@@ -82,7 +82,7 @@
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  padding: 20px;
+  padding: 14px;
   border: 1px solid white;
 }
 
@@ -131,8 +131,8 @@
 .assigned-circles-section {
   display: flex;
   justify-content: flex-start;
-  width: 290px;
-  height: fit-content;
+  width: 294px;
+  height: 60px;
   position: relative;
   top: -5px;
   overflow-x: auto;
