login layout mobile

--- a/styles/login.css
+++ b/styles/login.css
@@ -568,7 +568,7 @@ body {
     }
 
     .nau-sign-up-box {
-        top: 610px;
+        top: 85%;
     }
 
     .prvt-polce-legl-note-box {
@@ -596,7 +596,7 @@ body {
     }
 
     .nau-sign-up-box {
-        top: 550px;
+        top: 85%;
     }
 
     .prvt-polce-legl-note-box {
