--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -175,6 +175,27 @@
   margin-bottom: 10px;
   position: relative;
   right: 0;
+  top: -63%;
+}
+
+.error-message-one {
+  color: #ff0000;
+  font-size: 12px;
+  margin-top: -15px;
+  margin-bottom: 10px;
+  position: relative;
+  right: 0;
+  top: -37%;
+}
+
+.error-message-two {
+  color: #ff0000;
+  font-size: 12px;
+  margin-top: -15px;
+  margin-bottom: 10px;
+  position: relative;
+  right: 0;
+  top: -12%;
 }
 
 button:hover {
