--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -456,6 +456,34 @@ cursor: pointer;
 }
 
 @media (max-width: 1000px) {
+
+
+  .error-message {
+    color: #ff0000;
+    font-size: 12px;
+    margin-top: -15px;
+    position: absolute;
+    right: 16px;
+    top: 33%;
+  }
+  
+  .error-message-one {
+    color: #ff0000;
+    font-size: 12px;
+    margin-top: -15px;
+    position: absolute;
+    right: 16px;
+    top: 52%;
+  }
+  
+  .error-message-two {
+    color: #ff0000;
+    font-size: 12px;
+    margin-top: -15px;
+    position: absolute;
+    right: 16px;
+    top: 71%;
+  }
   .content-overlay-wrapper {
     flex-direction: column;
     height: fit-content;
