--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -4,6 +4,7 @@
 
 
 .contacts-content-left {
+  padding: 0 44px;
   width: 456px;
   /* Feste Breite von 456px */
   background-color: white;
@@ -67,6 +68,7 @@
   display: flex;
   align-items: center;
   padding: 16px;
+margin: 8px 0;
   gap: 16px;
   transition: background-color 0.15s ease;
 }
@@ -102,8 +104,6 @@
 }
 
 .contacts-list {
-  margin-top: 32px;
-  padding-left: 24px;
 }
 
 .current-letter-b {
