--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -152,7 +152,7 @@
 .contact-form input {
   width: 422px;
   height: 50px;
-  padding: 13px 21px;
+  padding: 13px 48px 13px 21px;
   border: 1px solid #ccc;
   border-radius: 10px;
   font-size: 20px;
