--- a/styles/contactSection/contacts_style.css
+++ b/styles/contactSection/contacts_style.css
@@ -349,7 +349,7 @@
 
 
 
-@media(max-width: 1000px) {
+@media(max-width: 1025px) {
   .edit-delete-btn {
     display: none;
   }
@@ -447,11 +447,25 @@
   .contacts-content-left {
     padding: 0 22px;
   }
+
+  .header-width {
+    padding: 0 !important;
+  }
+
+  .contacts-content-right h2 {
+    font-size: 24px;
+  }
 }
 
 @media(max-width: 350px) {
   .name-and-edit {
     padding-left: 8px !important;
+  }
+
+  .avatar-circle {
+    width: 60px !important;
+    height: 60px !important;
+    font-size: 24px !important;
   }
 
   .pic-and-name {
