--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -277,6 +277,10 @@ span {
     display: none;
   }
 
+  .header-width {
+    padding: 0 44px;
+  }
+
   .help-link {
     display: flex;
   }
@@ -357,9 +361,9 @@ span {
   }
 }
 
-@media (max-width: 1280px) {
-  .header-width {
-    padding: 0 16px;
+@media (max-width: 423px) {
+  .header {
+    padding: 0 35px 0 22px !important;
   }
 }
 
