--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -160,7 +160,6 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding-bottom: 140px;
 }
 
 .subtasks-btn {
@@ -505,6 +504,7 @@ textarea {
 }
 
 .edit-subtask-item {
+  position: relative;
   display: none;
   width: 100%;
   height: 64px;
@@ -517,9 +517,9 @@ textarea {
 .edit-subtask-btns {
   display: flex;
   gap: 8px;
-  position: relative;
-  top: -52%;
-  right: -87%;
+  position: absolute;
+  top: 0;
+  right: 5px;
 }
 
 .edit-subtask-btns img {
@@ -560,12 +560,12 @@ textarea {
 }
 
 .category-dropdown {
-  z-index: 8;
+  z-index: -1;
   display: none;
   height: 100px;
   width: 100%;
-  position: relative;
-  top: -60%;
+  position: absolute;
+  top: 82%;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -610,10 +610,6 @@ textarea {
     }
   }
 
-  .category-dropdown {
-    top: -64%;
-  }
-
   .addTask-footer {
     display: flex;
     justify-content: space-between;
@@ -641,7 +637,6 @@ textarea {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding-bottom: 140px;
   }
 }
 
@@ -652,10 +647,6 @@ textarea {
 
   .question-mark-img {
     display: none;
-  }
-
-  .category-dropdown {
-    top: -64%;
   }
 
   .content-wrapper {
@@ -693,7 +684,6 @@ textarea {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding-bottom: 140px;
   }
 
   .requiredResponsiveSpan {
