--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -382,6 +382,21 @@ textarea {
   pointer-events: none;
 }
 
+.category-input:hover .input-icon-category-container {
+  cursor: pointer;
+  background-color: #d9d9d98c;
+  border-radius: 50%;
+}
+
+.input-icon-assign-to-container {
+  pointer-events: none;
+}
+
+#assigned-to-input:hover .input-icon-assign-to-container {
+  background-color: #d9d9d98c;
+  border-radius: 50%;
+}
+
 .invalid:invalid {
   border-color: red;
 }
