--- a/styles/board.css
+++ b/styles/board.css
@@ -210,7 +210,7 @@ body {
   cursor: pointer;
   padding: 16px;
   border: none;
-  min-width: 240px;
+  min-width: 241px;
   border-radius: 24px;
   max-height: fit-content;
   display: flex;
@@ -320,6 +320,8 @@ progress {
 
 .add-task-overlay-content {
   z-index: 1000;
+  max-height: 90vh;
+  height: fit-content;
   overflow: auto;
   position: absolute;
   top: calc(50% - 435px);
@@ -488,10 +490,6 @@ progress {
 
 .close-task-card-overlay-btn {
   cursor: pointer;
-}
-
-.edit-task-overlay-hight {
-  height: 90vh !important;
 }
 
 .card-header{
@@ -693,7 +691,6 @@ progress {
   }
   
   .add-task-overlay-content {
-    height: 90vh;
     padding-bottom: 0;
   }
   .overlay-position {
@@ -740,7 +737,6 @@ progress {
   }
 
   .add-task-overlay-content {
-    height: fit-content;
     padding: 40px 54px;
     padding-bottom: 0;
   }
@@ -851,6 +847,7 @@ progress {
 
   .overlay-position {
     left: calc(50% - 181px);
+    width: 362px;
   }
 }
 
